3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Remove some static variables. Return values from server.
 plugins/cfpython/cfpython_object.c
 plugins/cfanim/include/cfanim_proto.h
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
 server/plugins.c
---
Update cf_object_[gs]et key to use parameter instead of void* return.
 include/plugin.h
 plugins/cfpython/cfpython_object.c
 plugins/cfanim/include/cfanim_proto.h
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
 server/plugins.c
---
Remove static variables from plugin API, use parameters instead.
 plugins/common/plugin_common.c
 server/plugins.c
Ryo 2007-10-11

Remove "sstable" command for players, which is called "ssdumptable" for DMs.
 include/sproto.h
 server/commands.c c_mist.c
---
Remove static buffer fur ss_dump_table. Use SS_ flags. Use LOG instead of direct fprintf.
 common/shstr.c
 include/libproto.h
 server/c_misc.c
---
include/global.h: errmsg isn't used anymore.
---
Remove errmsg use for ss_dump_statistics.
 common/shstr.c
 include/libproto.h
 server/c_misc.c
---
Fix get_split_ob not returning failure message (was through errmsg).
 common/object.c
 include/libproto.h
 server/apply.c c_object.c player.c plugins.c skills.c spell_effect.c
Ryo 2007-02-11

Remove errmsg use for dump_object and dump_arch. Merge dump_object and dump_object2.
 common/anim.c arch.c object.c
 crossedit/Attr.c
 include/libproto.h
 server/c_misc.c c_wiz.c server.c time.c
 test/unit/common/check_object.c
Ryo 2007-02-11

server/weather.c: Fix possible buffer overflows.
server/gods.c: Use correct format specifier in sprintf().
server/spell_util.c: Fix return statements with no value in non-void